# A-star-Pathfinding

./: .gitignore  .gitmodules  A star Pathfinding.sln  CMakeLists.txt  README.md  installDependencies.bash
A star Pathfinding Source/: A star Pathfinding.vcxproj  A star Pathfinding.vcxproj.filters
A star Pathfinding Source/Src/: Game.cpp  includes.h
A star Pathfinding Source/Src/Grid/: Grid.cpp
A star Pathfinding Source/Src/Knobs/: Button.cpp  Button.h
A star Pathfinding Source/Src/Tools/: FRect.h  Font.cpp
Debug/: OOP Template.ilk
OOP Template/: OOP Template.vcxproj  OOP Template.vcxproj.filters
OOP Template/Debug/: vc142.idb
OOP Template/Debug/OOP Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP Template.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OOP Template/Fonts/: Readme.html
OOP Template/Src/: Game.cpp  Setup.cpp  Setup.h  includes.h  main.cpp
OOP Template/Src/A star Pathfinder/: Node.h  Pathfinder.cpp  Pathfinder.h
OOP Template/Src/Grid/: Grid.cpp  Grid.h
OOP Template/Src/Tools/: Rect.h
Src/: Game.cpp  main.cpp
Src/Grid/: Grid.cpp  Grid.h
Src/Knobs/: Button.h
Src/Pathfinder/: Node.h  Pathfinder.h
src/: Game.cpp
src/Knobs/: Button.cpp
src/Tools/: FRect.cpp
